# password_app

./: .gitignore  README.md  main.py  main_view.py  pyproject.toml
services/: database.py  password.py
src/: database.py  main.py  password.py  state.py
src/services/: database.py
src/views/: generate_view.py  manage_view.py
tests/: test_database.py  test_password.py
views/: generate_view.py  manage_view.py
