[project]
name = "password-app"
version = "0.1.0"
description = "パスワード生成・管理アプリ"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.82.2",
    "pyinstaller>=6.19.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.82.2",
    "flet-desktop>=0.82.2",
    "flet-web>=0.82.2",
    "pytest>=9.0.0",
]

[tool.flet]
org = "com.mycompany"
product = "password-app"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "."

[tool.pytest.ini_options]
pythonpath = ["."]
